// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavMenuButton Matches Snapshot (defaultOpen) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1 > svg {
  color: inherit;
}

.c4 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  overflow-y: auto;
  padding: 0;
  position: absolute;
  width: 100%;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c6:hover {
  background-color: #DBDEE1;
}

.c6[disabled] {
  color: #B7BBC2;
  pointer-events: none;
}

.c0 {
  position: relative;
}

.c2 {
  background-color: #004E78;
  border-color: #004E78;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c2:hover {
  background-color: #004E78;
  border-color: #004E78;
}

.c3 {
  margin-left: var(--spacing-1x);
}

.c5 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

<nav
  aria-label="Menu"
  class="c0"
>
  <button
    aria-expanded="true"
    class="c1 c2"
    data-testid="menu-button"
    type="button"
  >
    Test Button
    <svg
      aria-hidden="true"
      class="c3"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <ul
    class="c4 c5"
    data-testid="menu-list"
  >
    <li>
      <a
        class="c6"
        data-testid="listitem-optionA"
        href="/testa"
        tabindex="0"
      >
        <span
          class="c7"
        >
          Option A
        </span>
      </a>
    </li>
    <li>
      <a
        class="c6"
        data-testid="listitem-optionB"
        href="/testb"
        tabindex="0"
      >
        <span
          class="c7"
        >
          Option B
        </span>
      </a>
    </li>
    <li>
      <a
        class="c6"
        data-testid="listitem-optionC"
        href="/testc"
        tabindex="0"
      >
        <span
          class="c7"
        >
          Option C
        </span>
      </a>
    </li>
    <li>
      <a
        class="c6"
        data-testid="listitem-optionD"
        href="/testd"
        tabindex="0"
      >
        <span
          class="c7"
        >
          Option D
        </span>
      </a>
    </li>
  </ul>
</nav>
`;

exports[`NavMenuButton Matches Snapshot 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1 > svg {
  color: inherit;
}

.c4 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  overflow-y: auto;
  padding: 0;
  position: absolute;
  width: 100%;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:focus {
  box-shadow: inset 0 0 0 3px #84C6EA,inset 0 0 0 1px #006296;
  outline: none;
}

.c6:hover {
  background-color: #DBDEE1;
}

.c6[disabled] {
  color: #B7BBC2;
  pointer-events: none;
}

.c0 {
  position: relative;
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c2:hover {
  background-color: #004E78;
  border-color: #004E78;
}

.c3 {
  margin-left: var(--spacing-1x);
}

.c5 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

<nav
  aria-label="Menu"
  class="c0"
>
  <button
    aria-expanded="false"
    class="c1 c2"
    data-testid="menu-button"
    type="button"
  >
    Test Button
    <svg
      aria-hidden="true"
      class="c3"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <ul
    class="c4 c5"
    data-testid="menu-list"
    hidden=""
  >
    <li>
      <a
        class="c6"
        data-testid="listitem-optionA"
        href="/testa"
        tabindex="0"
      >
        <span
          class="c7"
        >
          Option A
        </span>
      </a>
    </li>
    <li>
      <a
        class="c6"
        data-testid="listitem-optionB"
        href="/testb"
        tabindex="0"
      >
        <span
          class="c7"
        >
          Option B
        </span>
      </a>
    </li>
    <li>
      <a
        class="c6"
        data-testid="listitem-optionC"
        href="/testc"
        tabindex="0"
      >
        <span
          class="c7"
        >
          Option C
        </span>
      </a>
    </li>
    <li>
      <a
        class="c6"
        data-testid="listitem-optionD"
        href="/testd"
        tabindex="0"
      >
        <span
          class="c7"
        >
          Option D
        </span>
      </a>
    </li>
  </ul>
</nav>
`;
